[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Pictures/background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Pictures/UIsampleBR.png" type="Texture" id=2]
[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/ObjectivesBR.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=2]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 23
use_filter = true
font_data = ExtResource( 3 )

[node name="1Objectives2" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 515, 277 )
scale = Vector2( 6.3556, 2.51975 )
texture = ExtResource( 1 )

[node name="TITLE" type="RichTextLabel" parent="."]
margin_left = 398.0
margin_top = 16.0
margin_right = 658.0
margin_bottom = 78.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
tab_size = 24
text = "OBJETIVOS"

[node name="Node" type="Node" parent="."]

[node name="Anterior" type="Button" parent="."]
margin_left = 420.0
margin_top = 530.0
margin_right = 492.0
margin_bottom = 550.0
text = "Anterior"

[node name="Proximo" type="Button" parent="."]
margin_left = 502.0
margin_top = 530.0
margin_right = 574.0
margin_bottom = 550.0
text = "Próximo"

[node name="Menu" type="Button" parent="."]
margin_left = 1.0
margin_top = 579.0
margin_right = 49.0
margin_bottom = 599.0
text = "Menu"

[node name="Label" type="Label" parent="."]
margin_left = 58.0
margin_top = 339.0
margin_right = 997.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 3 )
text = "Como um vírus, seu objetivo é infectar 100% do corpo, evitando que sua Vida chegue à zero
 e evitando que a imunidade chegue à 100%."
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 515, 211 )
texture = ExtResource( 2 )

[connection signal="pressed" from="Anterior" to="." method="_on_Anterior_pressed"]
[connection signal="pressed" from="Proximo" to="." method="_on_Proximo_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
